--- a/src/app.html
+++ b/src/app.html
@@ -10,3 +10,9 @@
 		<div style="display: contents">%sveltekit.body%</div>
 	</body>
 </html>
+<style>
+	html {
+		overflow: auto;
+		scroll-snap-type: y mandatory;
+	}
+</style>
