added buttons that odnt work

--- a/src/app.html
+++ b/src/app.html
@@ -12,7 +12,9 @@
 </html>
 <style>
 	html {
-		overflow: auto;
+		height: 100vh;
+		/* position: relative; */
+		overflow: scroll;
 		scroll-snap-type: y mandatory;
 	}
 </style>
